--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </activity>
 
         <activity
-            android:name=".LoginPage"
+            android:name=".page.LoginPage"
             android:exported="true"
             android:theme="@style/LinkedOut">
             <intent-filter>
