--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
 
     <application
         android:name=".App"
-        tools:replace="android:theme , android:icon, android:roundIcon"
+        android:usesCleartextTraffic = "true"
+    tools:replace="android:theme , android:icon, android:roundIcon"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
