--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
 
     <application
         android:name=".App"
-        android:usesCleartextTraffic = "true"
-    tools:replace="android:theme , android:icon, android:roundIcon"
+        android:usesCleartextTraffic="true"
+        tools:replace="android:theme , android:icon, android:roundIcon"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -24,6 +24,9 @@
         android:supportsRtl="true"
         android:theme="@style/LinkedOut"
         tools:targetApi="31">
+        <meta-data
+            android:name="asset_statements"
+            android:resource="@string/asset_statements" />
         <service
             android:name=".MyFirebaseMessagingService"
             android:exported="false">
@@ -33,7 +36,10 @@
             </intent-filter>
         </service>
 
-        <receiver android:name=".AlarmReceiver" android:exported="true"/>
+        <receiver
+            android:name=".AlarmReceiver"
+            android:exported="true" />
+
         <activity
             android:name=".page.login.SplashPage"
             android:exported="true"
@@ -43,10 +49,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
 
             </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="myapp" />
+                <data android:host="splash" />
+            </intent-filter>
 
 
-
-    </activity>
+        </activity>
 
 
         <activity
@@ -70,20 +84,15 @@
             android:name=".page.login.LoginPage"
             android:exported="true"
             android:theme="@style/LinkedOut">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-            <intent-filter android:autoVerify="true">
+            <intent-filter >
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="http" />
                 <data android:scheme="https" />
                 <data android:host="linkedoutapp.com" />
+                <data android:path="/login" />
             </intent-filter>
         </activity>
 
