refactor: 로그인 패키지 정리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:exported="true" />
 
         <activity
-            android:name=".presentation.login.SplashPage"
+            android:name=".presentation.login.splash.SplashPage"
             android:exported="true"
             android:theme="@style/SplashTheme">
             <intent-filter>
